Implemented upload registration certificate logic
